# insect-nav

./: .gitignore  pyproject.toml
docs/: PLOTTING_INVENTORY.md  PLOTTING_STYLE_GUIDE.md  SPIKING_NETWORK_USAGE.md
insect_nav/: __init__.py  base.py  benchmark.py  config.py  genn_models.py  infomax.py  logger.py  memory.py  metrics.py  parallel.py  parameters.py  plot_style.py  spiking.py  spiking_gpu_batch.py  spiking_gpu_batch_optimized.py  spiking_gpu_hybrid.py  variants.py  vision.py
insect_nav/degree_strategies/: __init__.py  strategy10_cosine_fit.py  strategy11_depth_weighted_tiebreak.py  strategy12_window_parabolic_combo.py  strategy13_level_density_weighted.py  strategy14_gaussian_interp.py  strategy15_poisson_mle.py  strategy16_circular_kalman.py  strategy1_softmax_centroid.py  strategy2_population_vector.py  strategy3_parabolic_interp.py  strategy4_margin_average.py  strategy5_sliding_window.py  strategy6_smoothed_argmin.py  strategy7_tiebreak_continuity.py  strategy8_margin_grouping.py  strategy9_confidence_gated_ema.py
insect_nav/tuning/: __init__.py  degree_strategy_eval.py  pca_plotter.py  pm_teacher.py  tuner.py  utilities.py
tests/: test_benchmark.py  test_config.py  test_infomax.py  test_mbon_reset_determinism.py  test_metrics.py  test_perfect_memory.py  test_spiking_batched.py  test_tuning_utilities.py  test_variants.py  test_vision.py
tests/mbon_voltage_profile/scripts/: combined_metrics_model.py  combined_metrics_model_nn.py  common_paths.py  custom_high_rate_low_slope.py  custom_high_rate_low_slope_3.py  mbon_voltage_profile.py  (+3 more)
